// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ThemeProvider setSelectedThemeKey: [
  { themeKey: 'themeA' },
  { themeKey: 'mockDefaultSelectedThemeKey' },
  [length]: 2
] should change selected theme: default-light 1`] = `
<body>
  <div>
    <style
      data-theme-key="default-light"
    >
      ./theme-light-palette.css?raw
./theme-light-semantic.css?raw
./theme-light-semantic-chart.css?raw
./theme-light-semantic-editor.css?raw
./theme-light-semantic-grid.css?raw
./theme-light-components.css?raw
    </style>
    <div
      class="spectrum-theme-provider JuTe6q_spectrum _5QszkG_spectrum _5QszkG_i18nFontFamily PFjRbG_spectrum--light theme-spectrum-palette theme-spectrum-alias HAZavG_spectrum--large zA6MfG_spectrum zA6MfG_spectrum--dark zA6MfG_spectrum--darkest zA6MfG_spectrum--large zA6MfG_spectrum--light zA6MfG_spectrum--lightest zA6MfG_spectrum--medium"
      dir="ltr"
      lang="en-US"
      style="isolation: isolate; color-scheme: light;"
    >
      <div>
        Child
      </div>
    </div>
  </div>
</body>
`;

exports[`ThemeProvider setSelectedThemeKey: [
  { themeKey: 'themeA' },
  { themeKey: 'mockDefaultSelectedThemeKey' },
  [length]: 2
] should change selected theme: themeA 1`] = `
<body>
  <div>
    <style
      data-theme-key="default-dark"
    >
      ./theme-dark-palette.css?raw
./theme-dark-semantic.css?raw
./theme-dark-semantic-chart.css?raw
./theme-dark-semantic-editor.css?raw
./theme-dark-semantic-grid.css?raw
./theme-dark-components.css?raw
    </style>
    <style
      data-theme-key="themeA"
    />
    <div
      class="spectrum-theme-provider JuTe6q_spectrum _5QszkG_spectrum _5QszkG_i18nFontFamily PFjRbG_spectrum--light theme-spectrum-palette theme-spectrum-alias HAZavG_spectrum--large zA6MfG_spectrum zA6MfG_spectrum--dark zA6MfG_spectrum--darkest zA6MfG_spectrum--large zA6MfG_spectrum--light zA6MfG_spectrum--lightest zA6MfG_spectrum--medium"
      dir="ltr"
      lang="en-US"
      style="isolation: isolate; color-scheme: light;"
    >
      <div>
        Child
      </div>
    </div>
  </div>
</body>
`;

exports[`ThemeProvider setSelectedThemeKey: null should change selected theme: default-light 1`] = `
<body>
  <div>
    <div
      class="spectrum-theme-provider JuTe6q_spectrum _5QszkG_spectrum _5QszkG_i18nFontFamily PFjRbG_spectrum--light theme-spectrum-palette theme-spectrum-alias HAZavG_spectrum--large zA6MfG_spectrum zA6MfG_spectrum--dark zA6MfG_spectrum--darkest zA6MfG_spectrum--large zA6MfG_spectrum--light zA6MfG_spectrum--lightest zA6MfG_spectrum--medium"
      dir="ltr"
      lang="en-US"
      style="isolation: isolate; color-scheme: light;"
    >
      <div>
        Child
      </div>
    </div>
  </div>
</body>
`;

exports[`ThemeProvider setSelectedThemeKey: null should change selected theme: themeA 1`] = `
<body>
  <div>
    <div
      class="spectrum-theme-provider JuTe6q_spectrum _5QszkG_spectrum _5QszkG_i18nFontFamily PFjRbG_spectrum--light theme-spectrum-palette theme-spectrum-alias HAZavG_spectrum--large zA6MfG_spectrum zA6MfG_spectrum--dark zA6MfG_spectrum--darkest zA6MfG_spectrum--large zA6MfG_spectrum--light zA6MfG_spectrum--lightest zA6MfG_spectrum--medium"
      dir="ltr"
      lang="en-US"
      style="isolation: isolate; color-scheme: light;"
    >
      <div>
        Child
      </div>
    </div>
  </div>
</body>
`;

exports[`ThemeProvider should load themes based on default selected theme key: [
  { themeKey: 'themeA' },
  { themeKey: 'mockDefaultSelectedThemeKey' },
  [length]: 2
] 1`] = `
<body>
  <div>
    <style
      data-theme-key="default-dark"
    >
      ./theme-dark-palette.css?raw
./theme-dark-semantic.css?raw
./theme-dark-semantic-chart.css?raw
./theme-dark-semantic-editor.css?raw
./theme-dark-semantic-grid.css?raw
./theme-dark-components.css?raw
    </style>
    <style
      data-theme-key="mockDefaultSelectedThemeKey"
    />
    <div
      class="spectrum-theme-provider JuTe6q_spectrum _5QszkG_spectrum _5QszkG_i18nFontFamily PFjRbG_spectrum--light theme-spectrum-palette theme-spectrum-alias HAZavG_spectrum--large zA6MfG_spectrum zA6MfG_spectrum--dark zA6MfG_spectrum--darkest zA6MfG_spectrum--large zA6MfG_spectrum--light zA6MfG_spectrum--lightest zA6MfG_spectrum--medium"
      dir="ltr"
      lang="en-US"
      style="isolation: isolate; color-scheme: light;"
    >
      <div>
        Child
      </div>
    </div>
  </div>
</body>
`;

exports[`ThemeProvider should load themes based on default selected theme key: null 1`] = `
<body>
  <div>
    <div
      class="spectrum-theme-provider JuTe6q_spectrum _5QszkG_spectrum _5QszkG_i18nFontFamily PFjRbG_spectrum--light theme-spectrum-palette theme-spectrum-alias HAZavG_spectrum--large zA6MfG_spectrum zA6MfG_spectrum--dark zA6MfG_spectrum--darkest zA6MfG_spectrum--large zA6MfG_spectrum--light zA6MfG_spectrum--lightest zA6MfG_spectrum--medium"
      dir="ltr"
      lang="en-US"
      style="isolation: isolate; color-scheme: light;"
    >
      <div>
        Child
      </div>
    </div>
  </div>
</body>
`;
